# v-igno

./: .gitignore  evaluate.py  med.sh  pyproject.toml  run_training.py  short.sh  slurm-job.sh  slurm-pyproject.toml  slurm_helper.sh  slurm_job.sh  training.py
configs/: darcy_flow_continuous_igno_config.yaml  example_config.yaml
configs/evaluation/: darcy_continuous_in.yaml  darcy_continuous_out.yaml  evaluate.yaml
configs/training/: 10000.yaml  10000_lr.yaml  10_dc.yaml  10_just_nf.yaml  20000.yaml  20000_lr.yaml  20_dc.yaml  20_dgno_nf.yaml  20_just_nf.yaml  30000.yaml  30_dc.yaml  30_just_nf.yaml  50_just_nf.yaml  b_nf.yaml  darcy_continuous.yaml  darcy_continuous_just_nf.yaml  darcy_flow_continuous.yaml  potentially_better.yaml  temp_training.yaml  training.yaml
debug/: bijective_debug.py  debug_igno.py  debug_nf.py  distribution_debug.py  encoder_debug.py  forward_debug.py  nf_ablation.py  nf_post_debug.py  nf_train_debug.py  temp.py  temp_2.py  temp_3.py  temp_4.py
results/: 18_dims_in.json  18_dims_in_snr50.json  18_dims_out.json  24_dims_in.json  24_dims_out.json  affine_split.json  eval_igno_nobs100_clean_2026-01-14_01-17-22.json  neural_split.json
runs/100_dims/: config.yaml
runs/18_dims_incomplete/: config.yaml
runs/2025-12-15_15-51-58_first_trial_run/: loss_weights.yaml  optimizer_config.yaml  scheduler_config.yaml
runs/2026-01-06_22-34-58_darcy_experiment/: config.yaml
runs/2026-01-08_01-53-52_darcy_flow_continuous_igno/: config.yaml
runs/2026-01-15_13-07-21_darcy_continuous_just_nf/: config.yaml
runs/2026-01-15_17-05-24_10000/: config.yaml
runs/2026-01-15_17-18-05_learning_rate_10000/: config.yaml
runs/2026-01-15_17-20-33_20000/: config.yaml
runs/24_dims/: config.yaml
slurm/: slurm-job.sh
slurm_logs/: job_12152938.err  job_12152938.out  job_12154070.err  job_12154070.out
(+94 files in other folders)
