[project]
name = "VI-IGNO"
version = "0.1.0"
description = "Master thesis code"
readme = "README.md"
requires-python = ">=3.9,<3.11.0"
dependencies = [
    "matplotlib<3.5.0",
    "numpy<2.3.0",
    "pandas<2.3.0",
    "pytest>=8.4.2",
    "scienceplots>=2.2.0",
    "scipy>=1.13.1",
    "tensorboard>=2.20.0",
    "torch==2.6.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "h5py>=3.15.1",      
    "jupyter>=1.1.1",    
    "notebook>=7.5.0",   
    "ipykernel>=7.1.0",  
]

