[project]
name = "VI-IGNO"
version = "0.1.0"
description = "Master thesis code"
readme = "README.md"
requires-python = ">=3.10,<3.11.0"

dependencies = [
    # Apple Silicon macOS → modern matplotlib (prebuilt wheels)
    "matplotlib>=3.7; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "matplotlib<3.5; platform_system != 'Darwin'",
    "torch==2.7.0; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "torch==2.6.0; platform_system != 'Darwin'",
    "numpy<2.3.0",
    "pandas<2.3.0",
    "pytest>=8.4.2",
    "scienceplots>=2.2.0",
    "scipy>=1.13.1",
    "tensorboard>=2.20.0",
    "tqdm>=4.67.1",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "h5py>=3.10.0",
    "jupyter>=1.1.1",
    "notebook>=7.5.0",
    "ipykernel>=7.1.0",
    "pyro-ppl<=2.0.0"
]

